--- a/online-zoo/pages/landing/styles.css
+++ b/online-zoo/pages/landing/styles.css
@@ -60,23 +60,26 @@
   text-decoration: none;
 }
 
+.nav__item:hover {
+  text-shadow: 1px 1px 3px #70cb0e55;
+}
+
 .nav__item-highlighted {
-  text-shadow: 1px 1px 1px #70cb0e, 1px -1px 0 #70cb0e, -1px 1px 0 #70cb0e,
+  text-shadow: 1px 1px 0 #70cb0e, 1px -1px 0 #70cb0e, -1px 1px 0 #70cb0e,
     -1px -1px 0 #70cb0e, 0px 1px 0 #70cb0e, 1px -0px 0 #70cb0e,
     -1px 0px 0 #70cb0e, -0px -1px 0 #70cb0e;
   pointer-events: none;
 }
 
 /* main ------------------------------------------------------------------------------------------------------------ */
-.text_uppercase {
-  text-transform: uppercase;
-}
 
 .main__article {
   width: 1920px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: auto;
   box-sizing: border-box;
-  align-items: center;
 }
 
 .article__heading {
@@ -86,7 +89,11 @@
   font-weight: 500;
   font-size: 40px;
   line-height: 47px;
-  color: #000000;
+  color: #000;
+}
+
+.text_uppercase {
+  text-transform: uppercase;
 }
 
 /* Watch your favorite animal online ------------------------------------------------------------------------------------------------------------ */
@@ -123,11 +130,21 @@
   font-family: Roboto, sans-serif;
   font-size: 18px;
   cursor: pointer;
-  margin-top: 50px;
   outline: none;
 }
 
+.carousel__btn:hover,
+.btn:hover {
+  box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.carousel__btn:active,
+.btn:active {
+  box-shadow: inset 0px 0px 25px rgba(0, 0, 0, 0.8);
+}
+
 .btn_action_play {
+  margin-top: 50px;
   width: 233px;
 }
 
@@ -225,7 +242,7 @@
   line-height: 130%;
   /* or 21px */
   text-align: center;
-  color: #000000;
+  color: #000;
 }
 
 /* Pets in zoo ------------------------------------------------------------------------------------------------------------ */
@@ -237,22 +254,35 @@
 .carousel-2__wrapper {
   box-sizing: border-box;
   width: 1920px;
+  height: 644px;
   padding: 0 380px;
-  margin: 80px auto 0;
+  margin: 74px auto 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.carousel-2__btn {
-
+.carousel__btn {
+  width: 63px;
+  height: 63px;
+  background-color: #ffe68e;
+  border: 0px;
+  border-radius: 31.5px;
+  cursor: pointer;
+  outline: none;
 }
 
 .carousel-2__img-wrapper {
+  height: 630px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
   flex-direction: column;
+  justify-content: space-between;
+}
+
+.carousel-2__img-link {
+  width: 233px;
+  position: relative;
 }
 
 .carousel-2__img {
@@ -260,9 +290,174 @@
   height: 300px;
 }
 
+.img__capture {
+  width: 100%;
+  position: absolute;
+  text-align: center;
+  top: 15px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  color: #ffffff;
+  z-index: 2;
+}
+
+.carousel-2__img-link:hover .carousel-2__img {
+  width: 253px;
+  height: 330px;
+  margin: -15px -10px -15px -10px;
+  transition: 0.7s;
+}
+
+.carousel-2__img-link:hover .img__capture {
+  font-size: 18px;
+  transition: 0.7s;
+}
+
+.btn_action_choose {
+  width: 286px;
+  margin-top: 42px;
+}
+
 /* Pay and feed ------------------------------------------------------------------------------------------------------------ */
 
+.scheme__heading {
+  margin-top: 200px;
+}
+
+.scheme__wrapper {
+  width: 1050px;
+  height: 280px;
+  margin-top: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+}
+.scheme__figure {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.scheme__img {
+  padding: 50px;
+  margin: -50px;
+  background-image: url(../../assets/images/scheme_bg.png);
+  background-repeat: no-repeat;
+  background-position-x: 15px;
+  background-position-y: 30px;
+}
+
+.scheme__arrow-up,
+.scheme__arrow-down {
+  position: absolute;
+}
+
+.scheme__arrow-up {
+  top: -7px;
+  left: 266px;
+}
+
+.scheme__arrow-down {
+  bottom: 96px;
+  right: 263px;
+}
+
+.img__figcaption {
+  width: 320px;
+  margin-top: 48px;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  color: #000000;
+}
+
 /* aside ------------------------------------------------------------------------------------------------------------ */
+
+.testimonials__heading {
+  margin-top: 174px;
+}
+
+.testimonials__wrapper {
+  box-sizing: border-box;
+  margin-top: 80px;
+  width: 1920px;
+  height: 369px;
+  padding: 0 380px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.testimonials__grid {
+  display: grid;
+  grid-template-areas:
+    "user-img user-name user-name"
+    "user-img money-logo money-summ"
+    "speech speech speech";
+  grid-template-rows: 46px 46px auto;
+  grid-template-columns: 82px 15px auto;
+  width: 233px;
+  height: 369px;
+  margin: 0;
+  background-color: #a7e1ff;
+}
+
+.testimonials__user-img {
+  grid-area: user-img;
+  margin: 22px 10px 18px 20px;
+}
+.testimonials__user-name {
+  grid-area: user-name;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: #000;
+  position: relative;
+  top: 31px;
+}
+.testimonials__money-logo {
+  grid-area: money-logo;
+  width: 12px;
+  height: 12px;
+  position: relative;
+  top: 9px;
+}
+.testimonials__money-summ {
+  grid-area: money-summ;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 14px;
+  color: #000;
+  position: relative;
+  top: 7px;
+}
+.testimonials__speech {
+  grid-area: speech;
+  width: 193px;
+  margin: 0px 20px 30px;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19.2px;
+  color: #000;
+}
+
+.btn_action_feedback {
+  margin-top: 50px;
+  width: 246px;
+}
+
 /* footer ------------------------------------------------------------------------------------------------------------ */
 /*  ------------------------------------------------------------------------------------------------------------ */
 
