--- a/online-zoo/pages/zoos/alligator/styles.css
+++ b/online-zoo/pages/zoos/alligator/styles.css
@@ -2,7 +2,9 @@
   font-family: SceneW01-Black;
   src: url(../../../assets/fonts/12309.ttf);
 }
-
+html {
+  font-size: 10px;
+}
 /* header ------------------------------------------------------------------------------------------------------------ */
 
 .page {
@@ -60,7 +62,7 @@
 .nav__item {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 1.8rem;
   line-height: 21.09px;
   letter-spacing: normal;
   color: #000;
@@ -162,7 +164,7 @@
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 16px;
+  font-size: 1.6rem;
   line-height: 19px;
   color: #000;
 }
@@ -183,7 +185,7 @@
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: 500;
-  font-size: 40px;
+  font-size: 4rem;
   line-height: 47px;
   color: #000;
 }
@@ -268,7 +270,7 @@
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 16px;
+  font-size: 1.6rem;
   line-height: 19px;
   color: #000;
 }
@@ -298,7 +300,7 @@
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 16px;
+  font-size: 1.6rem;
   line-height: 19px;
   color: #000;
 }
@@ -308,7 +310,7 @@
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 16px;
+  font-size: 1.6rem;
   line-height: 19px;
   color: #000;
 }
@@ -368,8 +370,8 @@
   margin: 0 auto 0;
   display: grid;
   grid-template-areas:
-  "zoo-logo button button ul-1 ul-2"
-  "rss-logo yem-logo copyright copyright reference";
+    "zoo-logo button button ul-1 ul-2"
+    "rss-logo yem-logo copyright copyright reference";
   grid-template-rows: 46px auto;
   grid-template-columns: 198px 174px 218px 256px auto;
 }
@@ -395,7 +397,7 @@
   color: #000;
   height: 51px;
   font-family: Roboto, sans-serif;
-  font-size: 18px;
+  font-size: 1.8rem;
   cursor: pointer;
   outline: none;
 }
@@ -427,7 +429,7 @@
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
+  font-size: 1.8rem;
   line-height: 21px;
   color: #000;
   text-decoration: none;
@@ -468,7 +470,7 @@
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
+  font-size: 1.8rem;
   line-height: 21px;
   color: #000;
 }
@@ -480,7 +482,7 @@
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
+  font-size: 1.8rem;
   line-height: 21px;
   color: #000;
 }
