--- a/online-zoo/pages/landing/styles.css
+++ b/online-zoo/pages/landing/styles.css
@@ -6,19 +6,37 @@ html {
   font-size: 10px;
 }
 
+.page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+}
+
 /* header ------------------------------------------------------------------------------------------------------------ */
 
 .header {
-  width: 1920;
+  width: 1920px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: start;
   margin: auto;
+}
+
+@media (max-width: 1919px) {
+  .header {
+    width: 1200px;
+  }
+}
+
+@media (max-width: 1199px) {
+  .header {
+    width: 640px;
+  }
 }
 
 .header__flex {
   width: 1160px;
-  padding: 0 380px 0;
   height: 80px;
   display: flex;
   justify-content: flex-start;
@@ -88,6 +106,18 @@ html {
   box-sizing: border-box;
 }
 
+@media (max-width: 1919px) {
+  .main__article {
+    width: 1200px;
+  }
+}
+
+@media (max-width: 1199px) {
+  .main__article {
+    width: 640px;
+  }
+}
+
 .article__heading {
   text-align: center;
   font-family: Roboto, sans-serif;
@@ -105,7 +135,6 @@ html {
 /* Watch your favorite animal online ------------------------------------------------------------------------------------------------------------ */
 
 .top__background-wrap {
-  width: 100%;
   background: #59c3fb;
 }
 
@@ -115,12 +144,24 @@ html {
   display: flex;
   flex-direction: column;
   margin: auto;
+  align-items: center;
+}
+
+@media (max-width: 1919px) {
+  .main__top {
+    width: 1200px;
+  }
+}
+
+@media (max-width: 1199px) {
+  .main__top {
+    width: 640px;
+  }
 }
 
 .top__content {
+  width: 1160px;
   margin-top: 210px;
-  padding: 0 380px;
-  position: absolute;
   z-index: 5;
 }
 
@@ -161,6 +202,19 @@ html {
 .btn_action_play {
   margin-top: 50px;
   width: 233px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn_text-style_none {
+  text-decoration: none;
+}
+
+.btn_correct-pos_play {
+  margin-left: 1px;
+  position: relative;
+  left: 4.5px;
 }
 
 .top__background {
@@ -177,6 +231,7 @@ html {
     no-repeat;
   z-index: 1;
   overflow: hidden;
+  transition: 2s;
 }
 
 .background__drops-1 {
@@ -184,6 +239,8 @@ html {
   position: absolute;
   right: 282px;
   bottom: -37px;
+  transition: 1s;
+  transition-timing-function: cubic-bezier(0.1, -0.5, 0.1, 1.5);
 }
 
 .background__panda-0 {
@@ -193,6 +250,8 @@ html {
   position: absolute;
   bottom: 0;
   right: 361px;
+  transition: 1.5s;
+  transition-timing-function: cubic-bezier(0, 0, 0.23, 1);
 }
 
 .background__drops-2 {
@@ -200,6 +259,52 @@ html {
   position: absolute;
   left: 219px;
   bottom: -25px;
+  transition: 1s;
+  transition-timing-function: cubic-bezier(0.1, -0.5, 0.1, 1.5);
+}
+
+@media (max-width: 1919px) {
+  .top__background {
+    width: 1200px;
+    padding: 0px;
+  }
+
+  .background__drops-1 {
+    right: -80px;
+    bottom: -5px;
+  }
+
+  .background__panda-0 {
+    bottom: 0;
+    right: -14px;
+  }
+
+  .background__drops-2 {
+    left: -180px;
+    bottom: 5px;
+  }
+}
+
+@media (max-width: 1199px) {
+  .top__background {
+    width: 640px;
+    padding: 0px;
+  }
+
+  .background__drops-1 {
+    right: -80px;
+    bottom: -5px;
+  }
+
+  .background__panda-0 {
+    bottom: 0;
+    right: -14px;
+  }
+
+  .background__drops-2 {
+    left: -180px;
+    bottom: 5px;
+  }
 }
 
 /* How it works ------------------------------------------------------------------------------------------------------------ */
@@ -208,14 +313,37 @@ html {
   margin-top: 100px;
 }
 
+.carousel-1_bg-wrapper {
+  width: 100vw;
+  margin-top: 32px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url(../../assets/images/hiw_bg.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-position-y: -4px;
+}
+
 .carousel-1__list {
-  width: 1365px;
+  width: 1370px;
   height: 549px;
-  margin: 33px auto 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-image: url(../../assets/images/hiw_bg.png);
+  transition: 0.7s;
+}
+
+@media (max-width: 1919px) {
+  .carousel-1__list {
+    width: 1170px;
+  }
+}
+
+@media (max-width: 1199px) {
+  .carousel-1__list {
+    width: 640px;
+  }
 }
 
 .carousel-1__img {
@@ -227,6 +355,13 @@ html {
   width: 300px;
   height: 400px;
   margin: 0 -20px;
+  transition: 0.7s;
+}
+
+@media (max-width: 1919px) {
+  .img_m {
+    margin: 0 -70px;
+  }
 }
 
 .img_l {
@@ -245,12 +380,13 @@ html {
 .carousel-1__text {
   width: 933px;
   left: calc(50% - 933px / 2 - 0.5px);
-  margin: 32px auto 0;
+  margin: 30px auto 0;
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 1.6rem;
-  line-height: 130%;
+  /* line-height: 20.6px; */
+  line-height: 132%;
   text-align: center;
   color: #000;
 }
@@ -263,13 +399,18 @@ html {
 
 .carousel-2__wrapper {
   box-sizing: border-box;
-  width: 1920px;
-  height: 644px;
-  padding: 0 380px;
-  margin: 76px auto 0;
+  width: 1160px;
+  height: 630px;
+  margin: 80px auto 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+@media (max-width: 1919px) {
+  .carousel-2__wrapper {
+    width: 1160px;
+  }
 }
 
 .carousel__btn {
@@ -328,7 +469,7 @@ html {
 
 .btn_action_choose {
   width: 286px;
-  margin-top: 42px;
+  margin-top: 50px;
 }
 
 /* Pay and feed ------------------------------------------------------------------------------------------------------------ */
@@ -378,7 +519,7 @@ html {
 
 .img__figcaption {
   width: 320px;
-  margin-top: 48px;
+  margin-top: 43px;
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -388,18 +529,17 @@ html {
   color: #000000;
 }
 
-/* aside ------------------------------------------------------------------------------------------------------------ */
+/* Testimonials ------------------------------------------------------------------------------------------------------------ */
 
 .testimonials__heading {
-  margin-top: 174px;
+  margin-top: 172px;
 }
 
 .testimonials__wrapper {
   box-sizing: border-box;
   margin-top: 80px;
-  width: 1920px;
+  width: 1160px;
   height: 369px;
-  padding: 0 380px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -482,36 +622,51 @@ html {
   margin: 80px auto 0;
   padding-top: 20px;
   position: relative;
+  background-image: url(../../assets/images/footer_bg_1920.png);
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: 2px;
+}
+
+@media (max-width: 1919px) {
+  .footer {
+    background-image: url(../../assets/images/footer_bg_1200.png);
+    background-position-y: -47px;
+  }
 }
 
 .footer__background-wrap {
   width: 100%;
   position: relative;
-  background: #dff5b0;
+  background-color: #dff5b0;
 }
 
 .footer__bg {
-  box-sizing: border-box;
   width: 1920px;
   height: 700px;
-  padding: 0 380px;
   position: absolute;
   z-index: 1;
   overflow: hidden;
 }
 
-.footer__bg-img {
+@media (max-width: 1919px) {
+  .footer__bg {
+    width: 1200px;
+  }
+}
+
+/* .footer__bg-img {
   margin-top: -290px;
   margin-bottom: -350px;
   position: absolute;
   z-index: -1;
   bottom: 349px;
-}
+} */
 
 .footer__grid {
   width: 1160px;
   height: 170px;
-  padding: 80px 380px 20px;
+  padding: 80px 0 20px;
   margin: 0 auto 0;
   display: grid;
   grid-template-areas:
